Added a few sections

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!--navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
         <a href="#" class="navbar-brand">Lidy</a>
         <button
@@ -99,17 +99,308 @@
     <!--Boxes or maybe photos-->
     <section class="p-5">
       <div class="container">
-        <div class="row text-center">
+        <div class="row text-center g-4">
           <div class="col-md">
             <div class="card bg-dark text-light">
-              <div class="card-body text-center"></div>
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <i class="bi bi-laptop"></i>
+                </div>
+                <h3 class="card-title mb-3">Virtual</h3>
+                <p class="card-text">
+                  Imagine the future Brentford Girl; she thrives on challenge
+                  and has a desire to fulfil her learning potential; she is able
+                  to think independently and is confident in her social and
+                  academic capability; she is emotionally aware and emotionally
+                  intelligent;
+                </p>
+                <a href="#" class="btn btn-dark">Read more</a>
+              </div>
             </div>
           </div>
-          <div class="col-md">123</div>
-          <div class="col-md">123</div>
+          <div class="col-md">
+            <div class="card bg-dark text-light">
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <i class="bi bi-laptop"></i>
+                </div>
+                <h3 class="card-title mb-3">Virtual</h3>
+                <p class="card-text">
+                  Imagine the future Brentford Girl; she thrives on challenge
+                  and has a desire to fulfil her learning potential; she is able
+                  to think independently and is confident in her social and
+                  academic capability; she is emotionally aware and emotionally
+                  intelligent;
+                </p>
+                <a href="#" class="btn btn-dark">Read more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card bg-dark text-light">
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <i class="bi bi-laptop"></i>
+                </div>
+                <h3 class="card-title mb-3">Virtual</h3>
+                <p class="card-text">
+                  Imagine the future Brentford Girl; she thrives on challenge
+                  and has a desire to fulfil her learning potential; she is able
+                  to think independently and is confident in her social and
+                  academic capability; she is emotionally aware and emotionally
+                  intelligent;
+                </p>
+                <a href="#" class="btn btn-dark">Read more</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
+    <!--Learn section-->
+    <section id="learn" class="p-5">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md">
+            <img src="img/school3.jpg" class="img-fluid" alt="" />
+          </div>
+          <div class="col-md p-5">
+            <h2>Our programm</h2>
+            <p class="Lead">
+              Brentford School for Girls is committed to providing a planned
+              programme of careers education for all our students, a large array
+              of extra-curricular clubs, leadership opportunities and both
+              educational and pastoral care, as well as much more.
+            </p>
+            <p>
+              All 6th form students have access to a drop-in careers service in
+              school delivered by the Careers Education Co-ordinator. Details
+              about opt-in career events and courses are highlighted to all 6th
+              form students via regular emails. An HE ‘Futures’ fair is
+              organised in the Autumn term. 6th formers are supported through
+              the UCAS process by their tutor and by attending workshops and
+              assemblies presented by outside speakers from HE institutions,
+              alumni and other professionals. Specialist workshops and
+              interviews are organised to support alternative post-18 choices
+              through various organisations. For more careers information for
+              our sixth formers
+            </p>
+            <a href="#" class="btn btn-dark mt-3"
+              ><i class="bi bi-chevron-right"></i>Read more</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Teacher section-->
+    <section id="learn" class="p-5 bg-dark">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md p-5">
+            <h2>Our programm</h2>
+            <p class="Lead">
+              Brentford School for Girls is committed to providing a planned
+              programme of careers education for all our students, a large array
+              of extra-curricular clubs, leadership opportunities and both
+              educational and pastoral care, as well as much more.
+            </p>
+            <p class="text-light">
+              All 6th form students have access to a drop-in careers service in
+              school delivered by the Careers Education Co-ordinator. Details
+              about opt-in career events and courses are highlighted to all 6th
+              form students via regular emails. An HE ‘Futures’ fair is
+              organised in the Autumn term. 6th formers are supported through
+              the UCAS process by their tutor and by attending workshops and
+              assemblies presented by outside speakers from HE institutions,
+              alumni and other professionals. Specialist workshops and
+              interviews are organised to support alternative post-18 choices
+              through various organisations. For more careers information for
+              our sixth formers
+            </p>
+            <a href="#" class="btn btn-light mt-3"
+              ><i class="bi bi-chevron-right"></i>Read more</a
+            >
+          </div>
+          <div class="col-md">
+            <img src="img/school2.jpg" class="img-fluid" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Questions Accordion-->
+    <section id="question" class="p-5">
+      <div class="container">
+        <h2 class="text-center mb-4">Frequent Questions</h2>
+        <div class="accordion accordion-flush" id="questions">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-one"
+              >
+                Where the school is located?
+              </button>
+            </h2>
+            <div
+              id="question-one"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                The BLOSSOM programme in Year 8 includes CEIAG modules focussing
+                on Skills and Qualities, Enterprise, the Changing World,
+                Learning Styles and Sources of Information and an introduction
+                to Careers Research. Students also focus on their option choices
+                receiving an interview from a member of the SLT and subject
+                specific assemblies. The Year 8 drop-down careers day also
+                offers students the opportunity to talk with local professionals
+                from a range of occupational backgrounds.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-two"
+              >
+                What is the min and max age to apply?
+              </button>
+            </h2>
+            <div
+              id="question-two"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                The BLOSSOM programme in Year 8 includes CEIAG modules focussing
+                on Skills and Qualities, Enterprise, the Changing World,
+                Learning Styles and Sources of Information and an introduction
+                to Careers Research. Students also focus on their option choices
+                receiving an interview from a member of the SLT and subject
+                specific assemblies. The Year 8 drop-down careers day also
+                offers students the opportunity to talk with local professionals
+                from a range of occupational backgrounds.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-three"
+              >
+                How much does it cost?
+              </button>
+            </h2>
+            <div
+              id="question-three"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                The BLOSSOM programme in Year 8 includes CEIAG modules focussing
+                on Skills and Qualities, Enterprise, the Changing World,
+                Learning Styles and Sources of Information and an introduction
+                to Careers Research. Students also focus on their option choices
+                receiving an interview from a member of the SLT and subject
+                specific assemblies. The Year 8 drop-down careers day also
+                offers students the opportunity to talk with local professionals
+                from a range of occupational backgrounds.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="activities" class="p-5 bg-primary">
+      <div class="container">
+        <h2 class="text-center text-white">Our activities</h2>
+        <p class="lead text-center text-white mb-5">
+          The BLOSSOM programme in Year 7 includes CEIAG modules focussing on
+          Job, Career, Children and the Law, Budgeting, Equality and Gender
+          Stereotyping
+        </p>
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="http://randomuser.me/api/portraits/men/11.jpg"
+                  alt=""
+                />
+                <h3 class="card-title mb-3">Josh Doe</h3>
+                <p class="card-text">
+                  he BLOSSOM programme in Year 8 includes CEIAG modules
+                  focussing on Skills and Qualities, Enterprise, the Changing
+                  World, Learning Styles and Sources of Information and an
+                  introduction to Careers Research.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="http://randomuser.me/api/portraits/men/11.jpg"
+                  alt=""
+                />
+                <h3 class="card-title mb-3">Josh Doe</h3>
+                <p class="card-text">
+                  he BLOSSOM programme in Year 8 includes CEIAG modules
+                  focussing on Skills and Qualities, Enterprise, the Changing
+                  World, Learning Styles and Sources of Information and an
+                  introduction to Careers Research.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="http://randomuser.me/api/portraits/men/11.jpg"
+                  alt=""
+                />
+                <h3 class="card-title mb-3">Josh Doe</h3>
+                <p class="card-text">
+                  he BLOSSOM programme in Year 8 includes CEIAG modules
+                  focussing on Skills and Qualities, Enterprise, the Changing
+                  World, Learning Styles and Sources of Information and an
+                  introduction to Careers Research.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="http://randomuser.me/api/portraits/men/11.jpg"
+                  alt=""
+                />
+                <h3 class="card-title mb-3">Josh Doe</h3>
+                <p class="card-text">
+                  he BLOSSOM programme in Year 8 includes CEIAG modules
+                  focussing on Skills and Qualities, Enterprise, the Changing
+                  World, Learning Styles and Sources of Information and an
+                  introduction to Careers Research.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
       integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
